[workspace]
members = [
    "crates/radix-event-stream",
    "crates/examples",
    "crates/handler-macro",
]
resolver = "2"
license-file = "LICENSE"
package.version = "0.1.0"
package.edition = "2021"
package.license-file = "LICENSE"
package.repository = "https://github.com/ociswap/radix-event-stream"


[workspace.dependencies]
radix-common = { version = "1.2.0", features = ["serde"] }
sbor = { version = "1.2.0", features = ["serde"] }
radix-engine-interface = { version = "1.2.0" }
radix-engine = { version = "1.2.0" }
# Temporary fix until new gateway is released
sbor-json = { git = 'https://github.com/Krulknul/radix-engine-toolkit.git', branch = "temporary-fix-bottlenose" }
