[workspace]
members = ["radix-event-stream", "examples", "handler-macro"]
resolver = "2"
package.version = "1.2.0"
package.edition = "2021"
package.license-file = "LICENSE"
package.repository = "https://github.com/ociswap/radix-event-stream"
package.rust-version = "1.76"


[workspace.dependencies]
radix-common = { version = "1.2.0", features = ["serde"] }
sbor = { version = "1.2.0", features = ["serde"] }
radix-engine-interface = { version = "1.2.0" }
radix-engine = { version = "1.2.0" }
# Temporary fix until new gateway is released
sbor-json = { git = 'https://github.com/Krulknul/radix-engine-toolkit.git', branch = "temporary-fix-bottlenose" }
