[package]
name = "examples"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
radix-common = { workspace = true }
sbor = { workspace = true }
radix-engine = { workspace = true }
radix-event-stream = { path = "../radix-event-stream" }
sqlx = { version = "0.7.4", features = ["sqlite"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.19"
