[package]
name = "examples"
version = "1.1.1"
edition = "2021"

[dependencies]
radix-common = { workspace = true }
sbor = { workspace = true }
radix-engine = { workspace = true }
radix-event-stream = { path = "../radix-event-stream" }
sqlx = { version = "0.7.4", features = ["sqlite"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
