workspace = { members = ["async_wrapper_macro"] }
[package]
name = "asynctest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async_wrapper_macro = { path = "./async_wrapper_macro" }
async-trait = "0.1.79"
tokio = { version = "1.36.0", features = ["full"] }
